--- a/webserver/server/package.json
+++ b/webserver/server/package.json
@@ -19,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/BenjixD/OpenRCT2/issues"
   },
-  "homepage": "https://github.com/BenjixD/OpenRCT2#readme"
+  "homepage": "https://github.com/BenjixD/OpenRCT2#readme",
+  "dependencies": {
+    "async": "^2.6.0",
+    "child_process": "^1.0.2",
+    "express": "^4.16.3",
+    "https": "^1.0.0",
+    "multer": "^1.3.0",
+    "sanitizer": "^0.1.3",
+    "serve-favicon": "^2.5.0"
+  }
 }
