--- a/webserver/website/package.json
+++ b/webserver/website/package.json
@@ -4,12 +4,20 @@
   "description": "A website which sets up a server for openrct2",
   "main": "webpack.config.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "webpack": "^4.5.0",
     "webpack-dev-server": "^3.1.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "file-loader": "^1.1.11",
+    "webpack-cli": "^2.0.14"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
