--- a/webserver/server/package.json
+++ b/webserver/server/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/BenjixD/OpenRCT2#readme",
   "dependencies": {
     "async": "^2.6.0",
+    "body-parser": "^1.18.2",
     "child_process": "^1.0.2",
     "express": "^4.16.3",
     "https": "^1.0.0",
